// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingButton matches snapshot with default props 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 20,
      "pointerEvents": "box-none",
      "position": "absolute",
      "right": 20,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#107fdaff",
        "borderRadius": 50,
        "elevation": 8,
        "height": 55,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4.65,
        "width": 55,
      }
    }
    testID="floating-button"
  >
    <MaterialIcons
      color="#ffffff"
      name="person-add"
      size={25}
    />
  </View>
</View>
`;

exports[`FloatingButton matches snapshot with onPress handler 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 20,
      "pointerEvents": "box-none",
      "position": "absolute",
      "right": 20,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#107fdaff",
        "borderRadius": 50,
        "elevation": 8,
        "height": 55,
        "justifyContent": "center",
        "minHeight": 44,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4.65,
        "width": 55,
      }
    }
    testID="floating-button"
  >
    <MaterialIcons
      color="#ffffff"
      name="person-add"
      size={25}
    />
  </View>
</View>
`;
